2004-09-09  Jeffrey Stedfast  <fejj@novell.com>

	* em-message-browser.c (emmb_set_message): Ignore the
	emfv->mark_seen for deciding whether or not to mark the message as
	seen. Fixes bug #65448.

2004-09-09  Jeffrey Stedfast  <fejj@novell.com>

	* mail-account-gui.c (mail_account_gui_new): If built with
	gtkfilechooser support, we need to add a checkbox in the chooser
	so that the user can select files or folders (allowing him to
	choose - otherwise they won't be able to setup certain types of
	accounts). Fixes bug #64974.

2004-09-12  JP Rosevear  <jpr@novell.com>

	Fixes #65703
	
	* em-popup.c: use proper stock icon name

2004-09-08  Not Zed  <NotZed@Ximian.com>

	** See bug #60515.

	* mail-account-gui.c (sig_fill_menu): connect to the activate
	signal for the none item.

2004-09-03  Not Zed  <NotZed@Ximian.com>

	** See bug #59717.

	* mail-config.c (mail_config_check_service): Make the dialog
	modal.  Not ideal but a problem with the way the function works,
	it should be fully async instead.

2004-09-01  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #63377 and prevention of similar cases.

	* em-format.c (emf_finalise): Free the default_charset.
	(emf_format_clone): Clone the default_charset - this prevents the
	particular crash described in bug #63377.

	* em-utils.c (em_utils_message_to_html): If source is NULL, set
	our own default charset (from the user's gconf key) on the
	formatter to make sure there's always a source charset for
	conversion to UTF-8.

2004-08-30  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree.c (emft_popup_delete_folder): Set the store and
	full_name info on the dialog.
	(emft_popup_delete_response): Use the requisite data stored on the
	dialog object rather than examining the selection again. Fixes bug
	#62665.

2004-08-30  Not Zed  <NotZed@Ximian.com>

	** See bug #64377.

	* em-folder-selector.c (emfs_response): only set the uri if we
	have one to set.

	* em-folder-tree.c (em_folder_tree_finalize): Removed