@@ -1,3 +1,8 @@
+2004-09-21  David Malcolm  <dmalcolm@redhat.com>
+
+	* em-folder-tree-model.c (em_folder_tree_model_set_selected): Fix
+	a typo setting the root node.
+
 2004-09-09  Jeffrey Stedfast  <fejj@novell.com>
 
 	* em-message-browser.c (emmb_set_message): Ignore the
